tests/negative/test_block_non_eval_eval_pass.orb
fnc main () () {
    block i32 {
        eval (pass 0);
    };
};